css: merge redundant css to style.css

--- a/htdocs/byontp-recipes.html
+++ b/htdocs/byontp-recipes.html
@@ -2,22 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>BYO NTP Build Recipes</title>
+  <link rel="stylesheet" href="/style.css">
+  <meta name="description" content="A filterable list of build recipes / guides / how-tos for building your own NTP server.">
+
   <title>BYO-NTP Build Recipe Selector</title>
   <style>
     body {
-      font-family: sans-serif;
       max-width: 600px;
       margin: 20px auto;
-    }
-
-    .center {
-      text-align: center;
-    }
-    .bold {
-      font-weight: bold;
-    }
-    .small {
-      font-size: 0.7em;
     }
     .container {
       display: grid;
