more style considation and footers

--- a/htdocs/byontp-recipes.html
+++ b/htdocs/byontp-recipes.html
@@ -122,6 +122,10 @@
     </div>
   </div>
 
+  <footer>
+    <p>BYO-NTP is a community project. Please contribute at <a href="https://github.com/BYO-NTP/recipes/wiki">GitHub</a>.</p>
+  </footer>
+
   <script>
     const osButtons = document.querySelectorAll('.os div');
     const connButtons = document.querySelectorAll('.connection div');
