--- a/htdocs/accuracy.html
+++ b/htdocs/accuracy.html
@@ -47,12 +47,6 @@
     td:empty {
       background-color: #f5f5f5;
     }
-    footer {
-      margin-top: 20px;
-      padding: 5px;
-      text-align: center;
-      font-size: 0.8em;
-    }
   </style>
 </head>
 <body>
@@ -66,8 +60,9 @@
     <p class="color-ps">ps = picosecond  = 1e-12 = 0.000000000001</p>
   </div>
   <p class="center">This table shows the timing performance of various GNSS receivers on varying hardware,
-     operating systems, and NTP daemons. Each numeric result is a clickable link to the build recipe with
-     instructions for replicating that build.
+     operating systems, and NTP daemons. Each numeric value is the most inaccurate reading measured during a 12
+     hour measuring interval. The values are clickable links to the build recipe with instructions for
+     replicating that build.
   </p>
   <table id="timing-table">
     <thead>
@@ -84,46 +79,76 @@
       </tr>
     </thead>
     <tbody>
-      <tr><th>Pi 4</th><th>Pi OS</th><th>chrony</th><td>0.000000222</td><td>0.001010</td><td></td><td>0.000002850</td><td>0.000000206</td><td></td></tr>
-      <tr><th class="grey">Pi 4</th><th class="grey">Pi OS</th><th>sec</th><td>0.000006000</td><td>0.015400</td><td></td><td>0.000005900</td><td>0.000004000</td><td></td></tr>
-      <tr><th class="grey">Pi 4</th><th class="grey">Pi OS</th><th>sec + gpsd</th><td>0.000004100</td><td>0.006210</td><td></td><td>0.000005000</td><td>0.000004000</td><td></td></tr>
-      <tr><th class="grey">Pi 4</th><th class="grey">Pi OS</th><th>ntp</th><td>0.000031000</td><td>0.006020</td><td>0.0000000</td><td>0.000003000</td><td>0.000005000</td><td></td></tr>
-      <tr><th class="grey">Pi 4</th><th>BSD</th><th>chrony</th><td>0.000000522</td><td>0.001940</td><td></td><td>0.000001910</td><td>0.000000315</td><td></td></tr>
-      <tr><th class="grey">Pi 4</th><th class="grey">BSD</th><th>sec</th><td>0.000011000</td><td>0.002780</td><td></td><td>0.000011000</td><td>0.000007000</td><td></td></tr>
-      <tr><th class="grey">Pi 4</th><th class="grey">BSD</th><th>ntp</th><td>0.000012000</td><td>0.003740</td><td></td><td>0.000011000</td><td>0.000004000</td><td></td></tr>
-      <tr><th class="grey">Pi 4</th><th class="grey">BSD</th><th>ntp + gpsd</th><td>0.000024000</td><td>0.013000</td><td></td><td>0.000002320</td><td></td><td></td></tr>
+      <tr><th>Pi 4</th><th>Pi OS</th><th>chrony</th>
+          <td>0.000000222</td><td>0.001010</td><td>0.0000000</td><td>0.000002850</td><td>0.000000206</td><td></td></tr>
+      <tr><th class="grey">Pi 4</th><th class="grey">Pi OS</th><th>sec</th>
+          <td>0.000006000</td><td>0.015400</td><td>0.0000000</td><td>0.000005900</td><td>0.000004000</td><td></td></tr>
+      <tr><th class="grey">Pi 4</th><th class="grey">Pi OS</th><th>sec + gpsd</th>
+          <td>0.000004100</td><td>0.006210</td><td>0.0000000</td><td>0.000005000</td><td>0.000004000</td><td></td></tr>
+      <tr><th class="grey">Pi 4</th><th class="grey">Pi OS</th><th>ntp</th>
+          <td>0.000031000</td><td>0.006020</td><td>0.0000040</td><td>0.000003000</td><td>0.000005000</td><td></td></tr>
+      <tr><th class="grey">Pi 4</th><th>BSD</th><th>chrony</th>
+          <td>0.000000522</td><td>0.001940</td><td>         </td><td>0.000001910</td><td>0.000000315</td><td></td></tr>
+      <tr><th class="grey">Pi 4</th><th class="grey">BSD</th><th>sec</th>
+          <td>0.000011000</td><td>0.002780</td><td>         </td><td>0.000011000</td><td>0.000007000</td><td></td></tr>
+      <tr><th class="grey">Pi 4</th><th class="grey">BSD</th><th>ntp</th>
+          <td>0.000012000</td><td>0.003740</td><td>         </td><td>0.000011000</td><td>0.000004000</td><td></td></tr>
+      <tr><th class="grey">Pi 4</th><th class="grey">BSD</th><th>ntp + gpsd</th>
+          <td>0.000024000</td><td>0.013000</td><td>         </td><td>0.000002320</td><td>           </td><td></td></tr>
       <tr><th>&nbsp;</th><th></th><th></th><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-      <tr><th>Pi 5</th><th>Pi OS</th><th>chrony</th><td>0.000000313</td><td>0.001270</td><td></td><td>0.000000170</td><td>0.000000174</td><td></td></tr>
-      <tr><th class="grey">Pi 5</th><th class="grey">Pi OS</th><th>sec</th><td>0.000012000</td><td>0.010200</td><td></td><td>0.000002000</td><td>0.000003000</td><td></td></tr>
-      <tr><th class="grey">Pi 5</th><th class="grey">Pi OS</th><th>ntp</th><td>0.000005000</td><td>0.006760</td><td></td><td>0.000003000</td><td>0.000005000</td><td></td></tr>
-      <tr><th class="grey">Pi 5</th><th>BSD</th><th>chrony</th><td>0.000019500</td><td>0.002660</td><td></td><td></td><td>0.000003320</td><td></td></tr>
-      <tr><th class="grey">Pi 5</th><th class="grey">BSD</th><th>sec</th><td>0.000022000</td><td>0.007110</td><td></td><td></td><td>0.000088000</td><td></td></tr>
-      <tr><th class="grey">Pi 5</th><th class="grey">BSD</th><th>sec + gpsd</th><td>0.000015000</td><td>0.005770</td><td></td><td>0.000000000</td><td>0.000042000</td><td></td></tr>
-      <tr><th class="grey">Pi 5</th><th class="grey">BSD</th><th>ntp</th><td>0.000025000</td><td>0.005510</td><td>0.0000320</td><td>0.000032000</td><td>0.000070000</td><td></td></tr>
+      <tr><th>Pi 5</th><th>Pi OS</th><th>chrony</th>
+          <td>0.000000313</td><td>0.001270</td><td>         </td><td>0.000000170</td><td>0.000000174</td><td></td></tr>
+      <tr><th class="grey">Pi 5</th><th class="grey">Pi OS</th><th>sec</th>
+          <td>0.000012000</td><td>0.010200</td><td>         </td><td>0.000002000</td><td>0.000003000</td><td></td></tr>
+      <tr><th class="grey">Pi 5</th><th class="grey">Pi OS</th><th>ntp</th>
+          <td>0.000005000</td><td>0.006760</td><td>         </td><td>0.000003000</td><td>0.000005000</td><td></td></tr>
+      <tr><th class="grey">Pi 5</th><th>BSD</th><th>chrony</th>
+          <td>0.000019500</td><td>0.002660</td><td>         </td><td>           </td><td>0.000003320</td><td></td></tr>
+      <tr><th class="grey">Pi 5</th><th class="grey">BSD</th><th>sec</th>
+          <td>0.000022000</td><td>0.007110</td><td>         </td><td>           </td><td>0.000088000</td><td></td></tr>
+      <tr><th class="grey">Pi 5</th><th class="grey">BSD</th><th>sec + gpsd</th>
+          <td>0.000015000</td><td>0.005770</td><td>         </td><td>0.000017000</td><td>0.000042000</td><td></td></tr>
+      <tr><th class="grey">Pi 5</th><th class="grey">BSD</th><th>ntp</th>
+          <td>0.000025000</td><td>0.005510</td><td>0.0000320</td><td>0.000032000</td><td>0.000070000</td><td></td></tr>
+      <tr><th>&nbsp;</th><th></th><th></th><td></td>        <td></td><td></td><td></td><td></td><td></td></tr>
+      <tr><th>LarkBox</th><th>BSD</th><th>chrony</th>
+          <td>0.000004500</td><td>0.006880</td><td>0.0000049</td><td>0.000001910</td><td>0.000012600</td><td></td></tr>
+      <tr><th class="grey">LarkBox</th><th class="grey">BSD</th><th>sec</th>
+          <td>0.024900000</td><td>0.015000</td><td>0.0000880</td><td>0.000062000</td><td>0.000058000</td><td></td></tr>
+      <tr><th class="grey">LarkBox</th><th class="grey">BSD</th><th>sec + gpsd</th>
+          <td>0.000025000</td><td>0.013900</td><td>0.0000720</td><td>0.000064000</td><td>0.000045000</td><td></td></tr>
+      <tr><th class="grey">LarkBox</th><th class="grey">BSD</th><th>ntp</th>
+          <td>0.021700000</td><td>0.010400</td><td>0.0000510</td><td>0.000061000</td><td>0.000047000</td><td></td></tr>
+      <tr><th class="grey">LarkBox</th><th class="grey">BSD</th><th>ntp + gpsd</th>
+          <td>           </td><td>        </td><td>0.0001430</td><td>0.0000570000</td><td>0.000025000</td><td></td></tr>
+      <tr><th class="grey">LarkBox</th><th>Win</th><th>ntp</th>
+          <td>           </td><td>0.013600</td><td></td><td></td><td></td><td></td></tr>
       <tr><th>&nbsp;</th><th></th><th></th><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-      <tr><th>LarkBox</th><th>BSD</th><th>chrony</th><td>0.000004500</td><td>0.006880</td><td>0.0000049</td><td>0.000001910</td><td>0.000012600</td><td></td></tr>
-      <tr><th class="grey">LarkBox</th><th class="grey">BSD</th><th>sec</th><td>0.024900000</td><td>0.015000</td><td>0.0000880</td><td>0.000062000</td><td>0.000058000</td><td></td></tr>
-      <tr><th class="grey">LarkBox</th><th class="grey">BSD</th><th>sec + gpsd</th><td>0.000025000</td><td>0.013900</td><td>0.0000720</td><td>0.000064000</td><td>0.000045000</td><td></td></tr>
-      <tr><th class="grey">LarkBox</th><th class="grey">BSD</th><th>ntp</th><td>0.021700000</td><td>0.010400</td><td>0.0000510</td><td>0.000061000</td><td>0.000047000</td><td></td></tr>
-      <tr><th class="grey">LarkBox</th><th class="grey">BSD</th><th>ntp + gpsd</td><td></td><td></td><td>0.0001430</td><td>0.000057000</td><td>0.000025000</td><td></td></tr>
-      <tr><th class="grey">LarkBox</th><th>Win</th><th>ntp</th><td></td><td>0.013600</td><td></td><td></td><td></td><td></td></tr>
+      <tr><th>Xeon E5</th><th>BSD</th><th>chrony</th>
+          <td>           </td><td>        </td><td>         </td><td>0.000000426</td><td>            </td><td></td></tr>
+      <tr><th class="grey">Xeon E5</th><th class="grey">BSD</th><th>sec</th>
+          <td>           </td><td>        </td><td>         </td><td>0.000002000</td><td>            </td><td></td></tr>
+      <tr><th class="grey">Xeon E5</th><th class="grey">BSD</th><th>ntp</th>
+          <td>           </td><td>        </td><td>         </td><td>0.000004000</td><td>            </td><td></td></tr>
+      <tr><th class="grey">Xeon E5</th><th>Linux</th><th>chrony</th>
+          <td>           </td><td>        </td><td>         </td><td>0.000008810</td><td>            </td><td></td></tr>
       <tr><th>&nbsp;</th><th></th><th></th><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-      <tr><th>Xeon E5</th><th>BSD</th><th>chrony</th><td></td><td></td><td></td><td></td><td>0.000000426</td><td></td></tr>
-      <tr><th class="grey">Xeon E5</th><th class="grey">BSD</th><th>sec</th><td></td><td></td><td></td><td></td><td>0.000002000</td><td></td></tr>
-      <tr><th class="grey">Xeon E5</th><th class="grey">BSD</th><th>ntp</th><td></td><td></td><td></td><td></td><td>0.000004000</td><td></td></tr>
-      <tr><th class="grey">Xeon E5</th><th>Linux</th><th>chrony</th><td></td><td></td><td></td><td></td><td>0.000008810</td><td></td></tr>
-      <tr><th>&nbsp;</th><th></th><th></th><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-      <tr><th>M3 MBA</th><th>Mac</th><th>chrony</th><td>0.00172</td><td></td><td>0.001580</td><td></td><td></td><td></td></tr>
-      <tr><th class="grey">M3 MBA</th><th class="grey">Mac</th><th>mac-pps</th><td></td><td></td><td>0.000358</td><td></td><td>0.00000</td><td></td></tr>
-      <tr><th class="grey">M3 MBA</th><th class="grey">Mac</th><th>sec</th><td></td><td></td><td>0.008000</td><td></td><td></td><td></td></tr>
-      <tr><th class="grey">M3 MBA</th><th class="grey">Mac</th><th>sec + gpsd</th><td></td><td></td><td>0.007890</td><td></td><td></td><td></td></tr>
+      <tr><th>M3 MBA</th><th>Mac</th><th>chrony</th>
+          <td>0.00172    </td><td>        </td><td>0.001580 </td><td>           </td><td>            </td><td></td></tr>
+      <tr><th class="grey">M3 MBA </th><th class="grey">Mac</th><th>mac-pps</th>
+          <td>           </td><td>        </td><td>0.000358 </td><td>           </td><td>0.0000000000</td><td></td></tr>
+      <tr><th class="grey">M3 MBA </th><th class="grey">Mac</th><th>sec</th>
+          <td>           </td><td>        </td><td>0.008000 </td><td>           </td><td>            </td><td></td></tr>
+      <tr><th class="grey">M3 MBA </th><th class="grey">Mac</th><th>sec + gpsd</th>
+          <td>           </td><td>        </td><td>0.007890 </td><td>           </td><td>            </td><td></td></tr>
     </tbody>
   </table>
 
   <div class="legend">
     <p>BSD = FreeBSD 14</p>
-    <p>Linux = Debian 12</p>
-    <p>Mac = macOS 15</p>
+    <p>Linux = Debian 12 (Bookworm)</p>
+    <p>Pi OS = Raspberry Pi OS 12 Lite (Bookworm)</p>
+    <p>Mac = macOS 15 (Sequoia)</p>
     <p>Win = Windows 11</p>
   </div>
 
