*.html: use wiki as main page

--- a/htdocs/accuracy.html
+++ b/htdocs/accuracy.html
@@ -51,7 +51,8 @@
 </head>
 <body>
   <h1>GNSS Timing Performance</h1>
-  <p class="small center" style="margin-top: -14px;">by: <a href="https://byo-ntp.github.io">Build Your Own NTP server</a></p>
+  <p class="small center" style="margin-top: -14px;">
+    by: <a href="https://github.com/BYO-NTP/recipes/wiki">Build Your Own NTP server</a></p>
 
   <div style="display: flex; width: 80%; text-align: center; max-width: 1200px; align-items: center; justify-content: center; gap: 1em; margin: auto;">
     <div style="flex: 1; text-align: left;" class="legend">
