--- a/htdocs/srv-lookup.html
+++ b/htdocs/srv-lookup.html
@@ -28,6 +28,7 @@
 <body>
 
   <h1>NTP Server Lookup Tool</h1>
+  <p class="small center" style="margin-top: -18px;">by: <a href="https://github.com/BYO-NTP/recipes/wiki">Build Your Own NTP server</a></p>
 
   <label for="domainInput">Enter domain name:</label>
   <input id="domainInput" type="text" placeholder="example.com" />
