--- a/htdocs/byontp-recipes.html
+++ b/htdocs/byontp-recipes.html
@@ -73,7 +73,7 @@
 <body>
   <h2 class="center">BYO NTP Recipe Selector</h2>
   <p class="small center" style="margin-top: -18px; margin-bottom: 20px; color: #555;">
-    by: <a href="https://byo-ntp.github.io">Build Your Own NTP server</a></p>
+    by: <a href="https://github.com/BYO-NTP/recipes/wiki">Build Your Own NTP server</a></p>
 
     <p class="center">Select an OS and connection type to filter the BYO NTP build recipes.</p>
 
