--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -46,7 +46,7 @@
 
 <body>
   <h1 class="center">NTP Server Build Recipes</h1>
-  <p class="small center" style="margin-top: -18px;">by: <a href="https://byo-ntp.github.io">Build Your Own NTP server</a></p>
+  <p class="small center" style="margin-top: -18px;">by: <a href="https://github.com/BYO-NTP/recipes/wiki">Build Your Own NTP server</a></p>
 
   <p>Build a <a href="https://en.wikipedia.org/wiki/Satellite_navigation">GNSS</a> backed NTP Stratum 1 server, using proven
      components and processes. Each row is a clickable link to the build recipe with instructions
