--- a/htdocs/accuracy.html
+++ b/htdocs/accuracy.html
@@ -67,9 +67,9 @@
   </div>
 
   <p class="center">This table shows the timing performance of various GNSS receivers on varying hardware,
-     operating systems, and NTP daemons. Each numeric value is the most inaccurate reading measured during a 12
-     hour measuring interval. The 3 left header columns are clickable links to the build recipe for that row.
-     The numeric values are clickable and will open an image of the GNSS performance graph for that row.
+     operating systems, and NTP daemons. Numeric values are the most inaccurate reading measured during a 12
+     hour measuring interval. The 3 left header columns are links to the build recipe for that row.
+     Selecting the numeric values will open an image of the GNSS performance graph for that row.
   </p>
   <table id="timing-table">
     <thead>
@@ -77,77 +77,77 @@
         <th>HW</th>
         <th>OS</th>
         <th>daemon</th>
-        <th>6M</th>
-        <th>Stratux<br>VK-162 / U7</th>
-        <th>NEO-7M</th>
-        <th>MAX-M8Q</th>
-        <th>LEA-M8T</th>
         <th>M10</th>
+        <th>LEA-M8T</th>
+        <th>MAX-M8Q</th>
+        <th>NEO-7M<button class="toggle-col" data-col="6">-</button></th>
+        <th>VK-162<br>U7<button class="toggle-col" data-col="7">-</button></th>
+        <th>6M<button class="toggle-col" data-col="8">-</button></th>
       </tr>
     </thead>
     <tbody>
       <tr><th>Pi 4</th><th>Pi OS</th><th>chrony</th>
-          <td>0.000000222</td><td>0.001010</td><td>0.000000268</td><td>0.000002850</td><td>0.000000206</td><td></td></tr>
+        <td></td><td>0.000000206</td><td>0.000002850</td><td>0.000000268</td><td>0.00101</td><td>0.000000222</td></tr>
       <tr><th class="grey">Pi 4</th><th class="grey">Pi OS</th><th>sec</th>
-          <td>0.000006000</td><td>0.015400</td><td>0.000003000</td><td>0.000005900</td><td>0.000004000</td><td></td></tr>
+        <td></td><td>0.000004000</td><td>0.000005900</td><td>0.000003000</td><td>0.01540</td><td>0.000006000</td></tr>
       <tr><th class="grey">Pi 4</th><th class="grey">Pi OS</th><th>sec + gpsd</th>
-          <td>0.000004100</td><td>0.006210</td><td>0.000002700</td><td>0.000005000</td><td>0.000004000</td><td></td></tr>
+        <td></td><td>0.000004000</td><td>0.000005000</td><td>0.000002700</td><td>0.00621</td><td>0.000004100</td></tr>
       <tr><th class="grey">Pi 4</th><th class="grey">Pi OS</th><th>ntp</th>
-          <td>0.000031000</td><td>0.006020</td><td>0.000004000</td><td>0.000003000</td><td>0.000005000</td><td></td></tr>
+        <td></td><td>0.000005000</td><td>0.000003000</td><td>0.000004000</td><td>0.00602</td><td>0.000031000</td></tr>
       <tr><th class="grey">Pi 4</th><th>BSD</th><th>chrony</th>
-          <td>0.000000522</td><td>0.001940</td><td>0.000000541</td><td>0.000001910</td><td>0.000000315</td><td></td></tr>
+        <td></td><td>0.000000315</td><td>0.000001910</td><td>0.000000541</td><td>0.00194</td><td>0.000000522</td></tr>
       <tr><th class="grey">Pi 4</th><th class="grey">BSD</th><th>sec</th>
-          <td>0.000011000</td><td>0.002780</td><td>0.000015000</td><td>0.000011000</td><td>0.000007000</td><td></td></tr>
+        <td></td><td>0.000007000</td><td>0.000011000</td><td>0.000015000</td><td>0.00278</td><td>0.000011000</td></tr>
       <tr><th class="grey">Pi 4</th><th class="grey">BSD</th><th>ntp</th>
-          <td>0.000012000</td><td>0.003740</td><td>0.000016000</td><td>0.000011000</td><td>0.000004000</td><td></td></tr>
+        <td></td><td>0.000004000</td><td>0.000011000</td><td>0.000016000</td><td>0.00374</td><td>0.000012000</td></tr>
       <tr><th class="grey">Pi 4</th><th class="grey">BSD</th><th>ntp + gpsd</th>
-          <td>0.000024000</td><td>0.005230</td><td>0.000023000</td><td>0.000002320</td><td>           </td><td></td></tr>
+        <td></td><td>           </td><td>0.000002320</td><td>0.000023000</td><td>0.00523</td><td>0.000022000</td></tr>
       <tr><th>&nbsp;</th><th></th><th></th><td></td><td></td><td></td><td></td><td></td><td></td></tr>
       <tr><th>Pi 5</th><th>Pi OS</th><th>chrony</th>
-          <td>0.000000313</td><td>0.001270</td><td>           </td><td>0.000000170</td><td>0.000000174</td><td></td></tr>
+        <td></td><td>0.000000174</td><td>0.000000170</td><td>           </td><td>0.00127</td><td>0.000000313</td></tr>
       <tr><th class="grey">Pi 5</th><th class="grey">Pi OS</th><th>sec</th>
-          <td>0.000012000</td><td>0.010200</td><td>           </td><td>0.000002000</td><td>0.000003000</td><td></td></tr>
+        <td></td><td>0.000003000</td><td>0.000002000</td><td>           </td><td>0.01020</td><td>0.000012000</td></tr>
       <tr><th class="grey">Pi 5</th><th class="grey">Pi OS</th><th>ntp</th>
-          <td>0.000005000</td><td>0.006760</td><td>           </td><td>0.000003000</td><td>0.000005000</td><td></td></tr>
+        <td></td><td>0.000005000</td><td>0.000003000</td><td>           </td><td>0.00676</td><td>0.000005000</td></tr>
       <tr><th class="grey">Pi 5</th><th>BSD</th><th>chrony</th>
-          <td>0.000019500</td><td>0.002660</td><td>           </td><td>0.000001730</td><td>0.000003320</td><td></td></tr>
+        <td></td><td>0.000003320</td><td>0.000001730</td><td>           </td><td>0.00266</td><td>0.000019500</td></tr>
       <tr><th class="grey">Pi 5</th><th class="grey">BSD</th><th>sec</th>
-          <td>0.000022000</td><td>0.005980</td><td>           </td><td>0.000039000</td><td>0.000071000</td><td></td></tr>
+        <td></td><td>0.000071000</td><td>0.000039000</td><td>           </td><td>0.00598</td><td>0.000022000</td></tr>
       <tr><th class="grey">Pi 5</th><th class="grey">BSD</th><th>sec + gpsd</th>
-          <td>0.000015000</td><td>0.005780</td><td>0.000015000</td><td>0.000017000</td><td>0.000066000</td><td></td></tr>
+        <td></td><td>0.000066000</td><td>0.000017000</td><td>0.000015000</td><td>0.00578</td><td>0.000015000</td></tr>
       <tr><th class="grey">Pi 5</th><th class="grey">BSD</th><th>ntp</th>
-          <td>0.000025000</td><td>0.005510</td><td>0.000037000</td><td>0.000032000</td><td>0.000070000</td><td></td></tr>
-      <tr><th>&nbsp;</th><th></th><th></th><td></td>        <td></td><td></td><td></td><td></td><td></td></tr>
+        <td></td><td>0.000070000</td><td>0.000032000</td><td>0.000037000</td><td>0.00551</td><td>0.000025000</td></tr>
+      <tr><th>&nbsp;</th><th></th><th></th><td></td><td></td><td></td><td></td><td></td><td></td></tr>
       <tr><th>LarkBox</th><th>BSD</th><th>chrony</th>
-          <td>0.000004500</td><td>0.006880</td><td>0.000004930</td><td>0.000001910</td><td>0.000002440</td><td></td></tr>
+        <td></td><td>0.000002440</td><td>0.000001910</td><td>0.000004930</td><td>0.00688</td><td>0.000004500</td></tr>
       <tr><th class="grey">LarkBox</th><th class="grey">BSD</th><th>sec</th>
-          <td>0.024900000</td><td>0.015000</td><td>0.000088000</td><td>0.000045000</td><td>0.000058000</td><td></td></tr>
+        <td></td><td>0.000058000</td><td>0.000045000</td><td>0.000088000</td><td>0.01500</td><td>0.024900000</td></tr>
       <tr><th class="grey">LarkBox</th><th class="grey">BSD</th><th>sec + gpsd</th>
-          <td>0.000025000</td><td>0.010200</td><td>0.000072000</td><td>0.000017000</td><td>0.000045000</td><td></td></tr>
+        <td></td><td>0.000045000</td><td>0.000017000</td><td>0.000072000</td><td>0.01020</td><td>0.000025000</td></tr>
       <tr><th class="grey">LarkBox</th><th class="grey">BSD</th><th>ntp</th>
-          <td>0.021700000</td><td>0.009190</td><td>0.000051000</td><td>0.000061000</td><td>0.000047000</td><td></td></tr>
+        <td></td><td>0.000047000</td><td>0.000061000</td><td>0.000051000</td><td>0.00919</td><td>0.021700000</td></tr>
       <tr><th class="grey">LarkBox</th><th class="grey">BSD</th><th>ntp + gpsd</th>
-          <td>           </td><td>0.006730</td><td>0.000143000</td><td>0.000057000</td><td>0.000056000</td><td></td></tr>
+        <td></td><td>0.000056000</td><td>0.000057000</td><td>0.000143000</td><td>0.00673</td><td>           </td></tr>
       <tr><th class="grey">LarkBox</th><th>Win</th><th>ntp</th>
-          <td>           </td><td>0.013600</td><td></td><td></td><td></td><td></td></tr>
+        <td>           </td><td>           </td><td>           </td><td>           </td><td>0.01360</td><td>           </td></tr>
       <tr><th>&nbsp;</th><th></th><th></th><td></td><td></td><td></td><td></td><td></td><td></td></tr>
       <tr><th>Xeon E5</th><th>BSD</th><th>chrony</th>
-          <td>           </td><td>        </td><td>         </td><td>0.000000426</td><td>            </td><td></td></tr>
+        <td></td><td>           </td><td>0.000000426</td><td>           </td><td>        </td><td>           </td></tr>
       <tr><th class="grey">Xeon E5</th><th class="grey">BSD</th><th>sec</th>
-          <td>           </td><td>        </td><td>         </td><td>0.000002000</td><td>            </td><td></td></tr>
+        <td></td><td>           </td><td>0.000002000</td><td>           </td><td>        </td><td>           </td></tr>
       <tr><th class="grey">Xeon E5</th><th class="grey">BSD</th><th>ntp</th>
-          <td>           </td><td>        </td><td>         </td><td>0.000004000</td><td>            </td><td></td></tr>
+        <td></td><td>           </td><td>0.000004000</td><td>           </td><td>        </td><td>           </td></tr>
       <tr><th class="grey">Xeon E5</th><th>Linux</th><th>chrony</th>
-          <td>           </td><td>        </td><td>         </td><td>0.000008810</td><td>            </td><td></td></tr>
+        <td></td><td>           </td><td>0.000008810</td><td>           </td><td>        </td><td>           </td></tr>
       <tr><th>&nbsp;</th><th></th><th></th><td></td><td></td><td></td><td></td><td></td><td></td></tr>
       <tr><th>M3 MBA</th><th>Mac</th><th>chrony</th>
-          <td>0.00172    </td><td>        </td><td>0.001580 </td><td>           </td><td>            </td><td></td></tr>
+        <td></td><td>           </td><td>           </td><td>0.001580000</td><td>        </td><td>0.00172    </td></tr>
       <tr><th class="grey">M3 MBA </th><th class="grey">Mac</th><th>mac-pps</th>
-          <td>           </td><td>        </td><td>0.000358 </td><td>           </td><td>0.000372   </td><td></td></tr>
+        <td></td><td>0.000372   </td><td>           </td><td>0.000358000</td><td>        </td><td>           </td></tr>
       <tr><th class="grey">M3 MBA </th><th class="grey">Mac</th><th>sec</th>
-          <td>           </td><td>        </td><td>0.008000 </td><td>           </td><td>            </td><td></td></tr>
+        <td></td><td>           </td><td>           </td><td>0.008000000</td><td>        </td><td>           </td></tr>
       <tr><th class="grey">M3 MBA </th><th class="grey">Mac</th><th>sec + gpsd</th>
-          <td>           </td><td>        </td><td>0.007890 </td><td>           </td><td>            </td><td></td></tr>
+        <td></td><td>           </td><td>           </td><td>0.007890000</td><td>        </td><td>           </td></tr>
     </tbody>
   </table>
 
@@ -205,7 +205,7 @@
     }
 
     function getCellImage (th, tdIndex) {
-      const gnss = ['6M', 'U7', '7M', 'M8Q', 'M8T', 'M10'];
+      const gnss = ['M10', 'M8T', 'M8Q', '7M', 'U7', '6M'];
 
       if (th.length < 1) return;
 
@@ -237,8 +237,8 @@
       const overlay = document.getElementById('lightbox-overlay')
       const lbImg = document.getElementById('lightbox-img')
       const table = document.getElementById('timing-table')
-      const rows = table.querySelectorAll('tbody tr')
-      for (const row of rows) {
+
+      for (const row of table.querySelectorAll('tbody tr')) {
         const th = row.querySelectorAll('th')
         const recipe = getRowRecipe(th)
         if (recipe) {
@@ -247,9 +247,8 @@
           }
         }
 
-        const cells = row.querySelectorAll('td')
         let cellIndex = 0
-        for (const td of cells) {
+        for (const td of row.querySelectorAll('td')) {
           if (td.textContent.trim() !== '') {
             styleCell(td)
             const imgURI = getCellImage(th, cellIndex)
@@ -265,6 +264,23 @@
           }
           cellIndex++
         }
+      }
+
+      for (const button of table.querySelectorAll('.toggle-col')) {
+        button.addEventListener('click', function() {
+          const colIndex = parseInt(this.getAttribute('data-col'))
+
+          // Toggle all cells in this column
+          for (const row of table.querySelectorAll('tr')) {
+            const cells = row.querySelectorAll('td, th')
+            if (cells.length > colIndex) {
+              cells[colIndex].classList.toggle('collapsed')
+            }
+          }
+
+          // Update button text
+          this.textContent = this.textContent === '-' ? '+' : '-'
+        })
       }
     })
 
